[ci skip] Tweaks on nested CV analysis ce8a786e4919000735eef479077af5351c1d18e8

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e68073c1",
+   "id": "03fc0fd9",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a14d575b",
+   "id": "c71c5a7b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b75aae70",
+   "id": "86d17db0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -68,12 +68,16 @@
     "import polars as pl\n",
     "import skrub\n",
     "from pathlib import Path\n",
-    "import holidays"
+    "import holidays\n",
+    "import warnings\n",
+    "\n",
+    "# Ignore warnings from pkg_resources triggered by Python 3.13's multiprocessing.\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"pkg_resources\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7d1a2e83",
+   "id": "7ebb862f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -91,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d37cf052",
+   "id": "95451423",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5ed93f5",
+   "id": "ad1420ac",
    "metadata": {},
    "source": [
     "\n",
@@ -126,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "596c9d18",
+   "id": "044195dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfc2665",
+   "id": "6b1642da",
    "metadata": {},
    "source": [
     "\n",
@@ -149,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1361425",
+   "id": "ee824905",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,14 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1dd432b",
+   "id": "ac88d07f",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_city_weather_raw = {}\n",
     "for city_name in city_names:\n",
     "    # all_city_weather_raw[city_name] = skrub.var(\n",
-    "        # f\"{city_name}_weather_raw\",\n",
+    "    # f\"{city_name}_weather_raw\",\n",
     "    all_city_weather_raw[city_name] = (\n",
     "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\"))\n",
     "    ).with_columns(\n",
@@ -192,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ecc8d7d",
+   "id": "48ef2da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e02db2ef",
+   "id": "556201e7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -214,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8a069a8",
+   "id": "d211cb2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b97af66d",
+   "id": "f3fc6ed4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -257,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a454e887",
+   "id": "3ee41a70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee2da05",
+   "id": "06862c25",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -292,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9422100c",
+   "id": "d61bb813",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -309,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88223739",
+   "id": "3d289184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e53036",
+   "id": "719d6f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525738cb",
+   "id": "4d88854d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "980c76ae",
+   "id": "d041e50b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca5f7f79",
+   "id": "4ca88e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d35361e",
+   "id": "98d278fd",
    "metadata": {},
    "source": [
     "\n",
@@ -408,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04809a18",
+   "id": "72c88c70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50eda76f",
+   "id": "3ea62df8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -437,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af7a4006",
+   "id": "b4a701db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b4ab0c",
+   "id": "83c415c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "181fea9f",
+   "id": "b55bd1bf",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -507,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0ff2c3e",
+   "id": "291342fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139ad705",
+   "id": "f2b2ea2e",
    "metadata": {},
    "source": [
     "\n",
@@ -529,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f436c25",
+   "id": "35a57c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd530ea",
+   "id": "718837fb",
    "metadata": {},
    "source": [
     "\n",
@@ -552,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71770cea",
+   "id": "9937c66e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7af9be29",
+   "id": "dd90527c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74bddc84",
+   "id": "932eca91",
    "metadata": {},
    "source": [
     "\n",
@@ -621,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5d1eee",
+   "id": "cdfdf2ba",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -633,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7eddd93d",
+   "id": "f5a63010",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,8 +652,16 @@
     "        ).alias(\"prediction_time\"),\n",
     "    ),\n",
     ")\n",
-    "prediction_time\n",
-    "\n",
+    "prediction_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cef997a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "features = (\n",
     "    (\n",
     "        prediction_time.join(\n",
@@ -667,12 +679,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e15c0e",
+   "id": "97bfc1ed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon = 1\n",
+    "horizon = 12\n",
     "target_column_name = f\"load_mw_horizon_{horizon}h\"\n",
+    "predicted_target_column_name = f\"predicted_{target_column_name}\"\n",
+    "\n",
     "target_df = prediction_time.join(\n",
     "    electricity.with_columns(\n",
     "        [pl.col(\"load_mw\").shift(-horizon).alias(target_column_name)]\n",
@@ -686,31 +700,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91af7829",
+   "id": "f78ddb43",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
-    "import threadpoolctl\n",
     "\n",
     "\n",
-    "with threadpoolctl.threadpool_limits(limits=1):\n",
-    "    predictions = features.skb.apply(\n",
-    "        HistGradientBoostingRegressor(\n",
-    "            random_state=0,\n",
-    "            learning_rate=skrub.choose_float(\n",
-    "                0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
-    "            ),\n",
+    "predictions = features.skb.apply(\n",
+    "    HistGradientBoostingRegressor(\n",
+    "        random_state=0,\n",
+    "        learning_rate=skrub.choose_float(\n",
+    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
     "        ),\n",
-    "        y=target,\n",
-    "    )\n",
+    "        max_leaf_nodes=skrub.choose_int(\n",
+    "            3, 300, default=30, log=True, name=\"max_leaf_nodes\"\n",
+    "        ),\n",
+    "    ),\n",
+    "    y=target,\n",
+    ")\n",
     "predictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7cd5cfb",
+   "id": "55e2d7fd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -720,12 +735,14 @@
     "    pl.concat(\n",
     "        [\n",
     "            target_df.skb.eval(),\n",
-    "            predictions.rename({\"load_mw_horizon_1h\": \"predicted_load_mw_horizon_1h\"}).skb.eval(),\n",
+    "            predictions.rename(\n",
+    "                {target_column_name: predicted_target_column_name}\n",
+    "            ).skb.eval(),\n",
     "        ],\n",
     "        how=\"horizontal\",\n",
-    "    ).tail(1000)\n",
+    "    ).tail(24 * 7)\n",
     ").transform_fold(\n",
-    "    [target_column_name, \"predicted_load_mw_horizon_1h\"],\n",
+    "    [target_column_name, predicted_target_column_name],\n",
     ").mark_line(\n",
     "    tooltip=True\n",
     ").encode(\n",
@@ -736,32 +753,121 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c975e0f",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "dc8f2ca9",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
     "\n",
-    "ts_cv = TimeSeriesSplit(n_splits=5, max_train_size=None, gap=0)\n",
+    "mape_scorer = make_scorer(mean_absolute_percentage_error)\n",
+    "\n",
+    "ts_cv_5 = TimeSeriesSplit(n_splits=5, max_train_size=10_000, gap=24)\n",
+    "\n",
     "predictions.skb.cross_validate(\n",
-    "    cv=ts_cv,\n",
-    "    scoring=[\n",
-    "        \"neg_mean_absolute_error\",\n",
-    "        \"neg_mean_squared_error\",\n",
-    "        \"r2\",\n",
-    "        \"neg_mean_absolute_percentage_error\",\n",
-    "    ],\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    return_train_score=True,\n",
     "    verbose=1,\n",
     "    n_jobs=-1,\n",
-    ")"
+    ").round(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c84f1b1",
+   "id": "78653c41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_cv_3 = TimeSeriesSplit(n_splits=3, max_train_size=10_000, gap=24)\n",
+    "randomized_search = predictions.skb.get_randomized_search(\n",
+    "    cv=ts_cv_3,\n",
+    "    scoring=\"r2\",\n",
+    "    n_iter=30,\n",
+    "    fitted=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")\n",
+    "randomized_search.results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4584b73",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "randomized_search.plot_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f39a05fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results = skrub.cross_validate(\n",
+    "    environment=predictions.skb.get_data(),\n",
+    "    pipeline=randomized_search,\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    n_jobs=-1,\n",
+    "    return_pipeline=True,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3914cea6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0385ab4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for outer_cv_idx in range(len(nested_cv_results)):\n",
+    "    print(nested_cv_results.loc[outer_cv_idx, \"pipeline\"].results_.loc[0].round(3).to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4dbff550",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# from joblib import Parallel, delayed\n",
+    "\n",
+    "# cv_predictions = []\n",
+    "# for ts_cv_train_idx, ts_cv_test_idx in ts_cv_5.split(prediction_time.skb.eval()):\n",
+    "#     features[ts_cv_train_idx].fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd38c22",
    "metadata": {},
    "outputs": [],
    "source": []
