--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b5eb814",
+   "id": "cdd1c099",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac97ae5d",
+   "id": "eec72997",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb66a765",
+   "id": "7180e099",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -68,12 +68,16 @@
     "import polars as pl\n",
     "import skrub\n",
     "from pathlib import Path\n",
-    "import holidays"
+    "import holidays\n",
+    "import warnings\n",
+    "\n",
+    "# Ignore warnings from pkg_resources triggered by Python 3.13's multiprocessing.\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"pkg_resources\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "51adf56b",
+   "id": "76e3c6d9",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -91,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "701ba64d",
+   "id": "65d6eec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef06af5",
+   "id": "d0646c76",
    "metadata": {},
    "source": [
     "\n",
@@ -126,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40225a2",
+   "id": "a3023dec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bff48e2",
+   "id": "72936d84",
    "metadata": {},
    "source": [
     "\n",
@@ -149,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "649e752a",
+   "id": "60b0961c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,14 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20715346",
+   "id": "71df86c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "all_city_weather_raw = {}\n",
     "for city_name in city_names:\n",
     "    # all_city_weather_raw[city_name] = skrub.var(\n",
-    "        # f\"{city_name}_weather_raw\",\n",
+    "    # f\"{city_name}_weather_raw\",\n",
     "    all_city_weather_raw[city_name] = (\n",
     "        pl.from_arrow(read_table(f\"../datasets/weather_{city_name}.parquet\"))\n",
     "    ).with_columns(\n",
@@ -192,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64e7bec9",
+   "id": "3cc89fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d50474e",
+   "id": "58e012d9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -214,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27f512f3",
+   "id": "651914b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444a4ccc",
+   "id": "862c60b3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -257,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8005ab73",
+   "id": "ca4f988d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0626a154",
+   "id": "8d6c543a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -292,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "985b9fad",
+   "id": "499ce4da",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -309,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfbda741",
+   "id": "6e6f3a83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "234ed0ba",
+   "id": "4acdfd76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd0b6bb",
+   "id": "6680c67e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f11bafc",
+   "id": "faf266ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28dcdf15",
+   "id": "299a65cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f26bbc",
+   "id": "94cf6119",
    "metadata": {},
    "source": [
     "\n",
@@ -408,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c61afc6d",
+   "id": "8fe0f94d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7855726c",
+   "id": "4f86462b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -437,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398242f2",
+   "id": "121ce26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c53ddc8",
+   "id": "c0ccbaa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de6d485",
+   "id": "707991e3",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -507,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c79e8c4",
+   "id": "c595441e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099f6498",
+   "id": "b3f84ee9",
    "metadata": {},
    "source": [
     "\n",
@@ -529,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6da73ad9",
+   "id": "6c50e3fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9b4b82",
+   "id": "936670d2",
    "metadata": {},
    "source": [
     "\n",
@@ -552,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2491fd5",
+   "id": "408c5985",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba29411f",
+   "id": "977adc93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11bda6a2",
+   "id": "046dd368",
    "metadata": {},
    "source": [
     "\n",
@@ -621,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c33a1b",
+   "id": "a27ff057",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -633,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f415d81",
+   "id": "5e0e18c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,8 +652,16 @@
     "        ).alias(\"prediction_time\"),\n",
     "    ),\n",
     ")\n",
-    "prediction_time\n",
-    "\n",
+    "prediction_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5615646e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "features = (\n",
     "    (\n",
     "        prediction_time.join(\n",
@@ -667,12 +679,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd9bcd5",
+   "id": "024e46b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "horizon = 1\n",
+    "horizon = 12\n",
     "target_column_name = f\"load_mw_horizon_{horizon}h\"\n",
+    "predicted_target_column_name = f\"predicted_{target_column_name}\"\n",
+    "\n",
     "target_df = prediction_time.join(\n",
     "    electricity.with_columns(\n",
     "        [pl.col(\"load_mw\").shift(-horizon).alias(target_column_name)]\n",
@@ -686,31 +700,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ca787ac",
+   "id": "d46a4251",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import HistGradientBoostingRegressor\n",
-    "import threadpoolctl\n",
     "\n",
     "\n",
-    "with threadpoolctl.threadpool_limits(limits=1):\n",
-    "    predictions = features.skb.apply(\n",
-    "        HistGradientBoostingRegressor(\n",
-    "            random_state=0,\n",
-    "            learning_rate=skrub.choose_float(\n",
-    "                0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
-    "            ),\n",
+    "predictions = features.skb.apply(\n",
+    "    HistGradientBoostingRegressor(\n",
+    "        random_state=0,\n",
+    "        learning_rate=skrub.choose_float(\n",
+    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
     "        ),\n",
-    "        y=target,\n",
-    "    )\n",
+    "        max_leaf_nodes=skrub.choose_int(\n",
+    "            3, 300, default=30, log=True, name=\"max_leaf_nodes\"\n",
+    "        ),\n",
+    "    ),\n",
+    "    y=target,\n",
+    ")\n",
     "predictions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41975464",
+   "id": "b641722c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -720,12 +735,14 @@
     "    pl.concat(\n",
     "        [\n",
     "            target_df.skb.eval(),\n",
-    "            predictions.rename({\"load_mw_horizon_1h\": \"predicted_load_mw_horizon_1h\"}).skb.eval(),\n",
+    "            predictions.rename(\n",
+    "                {target_column_name: predicted_target_column_name}\n",
+    "            ).skb.eval(),\n",
     "        ],\n",
     "        how=\"horizontal\",\n",
-    "    ).tail(1000)\n",
+    "    ).tail(24 * 7)\n",
     ").transform_fold(\n",
-    "    [target_column_name, \"predicted_load_mw_horizon_1h\"],\n",
+    "    [target_column_name, predicted_target_column_name],\n",
     ").mark_line(\n",
     "    tooltip=True\n",
     ").encode(\n",
@@ -736,32 +753,121 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d079f5b",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "2fb37878",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
     "\n",
-    "ts_cv = TimeSeriesSplit(n_splits=5, max_train_size=None, gap=0)\n",
+    "mape_scorer = make_scorer(mean_absolute_percentage_error)\n",
+    "\n",
+    "ts_cv_5 = TimeSeriesSplit(n_splits=5, max_train_size=10_000, gap=24)\n",
+    "\n",
     "predictions.skb.cross_validate(\n",
-    "    cv=ts_cv,\n",
-    "    scoring=[\n",
-    "        \"neg_mean_absolute_error\",\n",
-    "        \"neg_mean_squared_error\",\n",
-    "        \"r2\",\n",
-    "        \"neg_mean_absolute_percentage_error\",\n",
-    "    ],\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    return_train_score=True,\n",
     "    verbose=1,\n",
     "    n_jobs=-1,\n",
-    ")"
+    ").round(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4a274f",
+   "id": "f2cf044f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts_cv_3 = TimeSeriesSplit(n_splits=3, max_train_size=10_000, gap=24)\n",
+    "randomized_search = predictions.skb.get_randomized_search(\n",
+    "    cv=ts_cv_3,\n",
+    "    scoring=\"r2\",\n",
+    "    n_iter=30,\n",
+    "    fitted=True,\n",
+    "    verbose=1,\n",
+    "    n_jobs=-1,\n",
+    ")\n",
+    "randomized_search.results_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468bcb2c",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "randomized_search.plot_results()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee1512d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results = skrub.cross_validate(\n",
+    "    environment=predictions.skb.get_data(),\n",
+    "    pipeline=randomized_search,\n",
+    "    cv=ts_cv_5,\n",
+    "    scoring={\n",
+    "        \"r2\": get_scorer(\"r2\"),\n",
+    "        \"mape\": mape_scorer,\n",
+    "    },\n",
+    "    n_jobs=-1,\n",
+    "    return_pipeline=True,\n",
+    ").round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed492385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nested_cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6760ecf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for outer_cv_idx in range(len(nested_cv_results)):\n",
+    "    print(nested_cv_results.loc[outer_cv_idx, \"pipeline\"].results_.loc[0].round(3).to_dict())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dc8356e",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# from joblib import Parallel, delayed\n",
+    "\n",
+    "# cv_predictions = []\n",
+    "# for ts_cv_train_idx, ts_cv_test_idx in ts_cv_5.split(prediction_time.skb.eval()):\n",
+    "#     features[ts_cv_train_idx].fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9cb1df1",
    "metadata": {},
    "outputs": [],
    "source": []
